add: update category
